# TSGE

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  AIへの質問.txt  CARD.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  codecov.yml
.claude/: settings.json
.claude/commands/: implementaton.md  implementaton_plan.md
.github/workflows/: ci.yml  cleanup.yml
docs/: MCTSflowchart.md  flowchart.md  sequenceDiagram.md
include/: action.hpp  board.hpp  card.hpp  card_base.hpp  cards.hpp  cards_enum.hpp  command.hpp  country.hpp  game.hpp  game_enums.hpp  legal_moves_generator.hpp  move.hpp  phase_machine.hpp  player.hpp  policies.hpp  trackers.hpp  world_map.hpp
include/tsge/actions/: CLAUDE.md  Command.md  LegalMovesGenerator.md  Move.md  card_effect_legal_move_generator.hpp  card_specific_moves.hpp  command.hpp  game_logic_legal_moves_generator.hpp  legal_moves_generator.hpp  move.hpp
include/tsge/core/: PhaseMachine.md  board.hpp  game.hpp  phase_machine.hpp
include/tsge/enums/: cards_enum.hpp  game_enums.hpp
include/tsge/game_state/: CLAUDE.md  card.hpp  cards.hpp  country.hpp  deck.hpp  trackers.hpp  world_map.hpp  world_map_constants.hpp
include/tsge/game_state/cards/: CLAUDE.md  basic_event_cards.hpp  scoring_cards.hpp  special_cards.hpp
include/tsge/players/: mcts_policy.hpp  player.hpp  policies.hpp  tsnnmcts.hpp
include/tsge/utils/: randomizer.hpp
src/: action.cpp  board.cpp  cards.cpp  command.cpp  country.cpp  game.cpp  legal_moves_generator.cpp  move.cpp  phase_machine.cpp  policies.cpp  randomizer.cpp  trackers.cpp  world_map.cpp
src/actions/: card_effect_legal_move_generator.cpp  card_specific_moves.cpp  command.cpp  game_logic_legal_moves_generator.cpp  legal_moves_generator.cpp  move.cpp
src/core/: board.cpp  game.cpp  phase_machine.cpp
src/game_state/: cards.cpp  country.cpp  deck.cpp  trackers.cpp  world_map.cpp  world_map_constants.cpp
src/game_state/cards/: basic_event_cards.cpp  scoring_cards.cpp  special_cards.cpp
src/players/: mcts_policy.cpp  policies.cpp  tsnnmcts.cpp
src/utils/: randomizer.cpp
tests/: action_test.cpp  cards_test.cpp  command_test.cpp  trackers_test.cpp  world_map_test.cpp
tests/actions/: command_test.cpp  event_remove_influence_test.cpp  legal_moves_generator_test.cpp  move_test.cpp  special_place_influence_test.cpp
tests/actions/legal_moves_generator/: action_ops_moves_test.cpp  event_remove_influence_test.cpp  misc_moves_test.cpp  realignment_moves_test.cpp  special_place_influence_test.cpp  test_helper.hpp
tests/core/: board_mcts_test.cpp  board_scoring_test.cpp  board_test.cpp  game_test.cpp  phase_machine_test.cpp
tests/core/phase_machine/: phase_machine_action_round_test.cpp  phase_machine_headline_test.cpp  phase_machine_misc_test.cpp  phase_machine_test_helper.hpp  phase_machine_turn_phase_test.cpp
tests/game_state/: basic_event_cards_test.cpp  cards_test.cpp  country_test.cpp  deck_test.cpp  scoring_cards_test.cpp  special_cards_test.cpp  trackers_test.cpp  world_map_test.cpp
tests/game_state/basic_event_cards_test/: basic_event_card_test_base.hpp  early_war.cpp  early_war_place_cards_tests.hpp  late_war.cpp  mid_war.cpp  place_cards_test.hpp
tests/players/: tsnnmcts_policy_test.cpp
